archetect-templating/tests/snapshots/test_templates__vm@err_bad_super.txt.snap
---
source: archetect_templating/tests/test_templates.rs
description: "{% extends \"bad_basic_block.txt\" %}\n{% block title %}My Title{% endblock %}\n{% block body %}\n  Changed stuff goes here. {{ super() }}\n{% endblock %}"
info: {}
input_file: archetect_templating/tests/inputs/err_bad_super.txt
---
!!!ERROR!!!

Error {
    kind: EvalBlock,
    detail: "error in super block",
    name: "err_bad_super.txt",
    line: 4,
    source: Error {
        kind: UnknownFunction,
        detail: "missing_function is unknown",
        name: "bad_basic_block.txt",
        line: 3,
    },
}

could not render block: error in super block (in err_bad_super.txt:4)
------------------------------ err_bad_super.txt ------------------------------
   1 | {% extends "bad_basic_block.txt" %}
   2 | {% block title %}My Title{% endblock %}
   3 | {% block body %}
   4 >   Changed stuff goes here. {{ super() }}
     i                               ^^^^^^^ could not render block
   5 | {% endblock %}
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
No referenced variables
-------------------------------------------------------------------------------

caused by: unknown function: missing_function is unknown (in bad_basic_block.txt:3)
----------------------------- bad_basic_block.txt -----------------------------
   1 | <title>{% block title %}default title{% endblock %}</title>
   2 | {% block body %}
   3 >   {{ missing_function() }}
     i      ^^^^^^^^^^^^^^^^^^ unknown function
   4 | {% endblock %}
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
No referenced variables
-------------------------------------------------------------------------------

