archetect-templating/tests/snapshots/test_templates__vm@err_extends_actually_not.txt.snap
---
source: archetect_templating/tests/test_templates.rs
description: "before\n{% if not_true %}\n  {% extends \"something.html\" %}\n{% endif %}\nand after"
info:
  not_true: false
input_file: archetect_templating/tests/inputs/err_extends_actually_not.txt
---
before

and after

