archetect-templating/tests/snapshots/test_templates__vm@err_no_super_block.txt.snap
---
source: archetect_templating/tests/test_templates.rs
description: "{% block body %}\n  There is no super block.\n  {{ super() }}\n{% endblock %}"
info: {}
input_file: archetect_templating/tests/inputs/err_no_super_block.txt
---
!!!ERROR!!!

Error {
    kind: InvalidOperation,
    detail: "no parent block exists",
    name: "err_no_super_block.txt",
    line: 3,
}

invalid operation: no parent block exists (in err_no_super_block.txt:3)
--------------------------- err_no_super_block.txt ----------------------------
   1 | {% block body %}
   2 |   There is no super block.
   3 >   {{ super() }}
     i      ^^^^^^^ invalid operation
   4 | {% endblock %}
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
No referenced variables
-------------------------------------------------------------------------------

