archetect-templating/tests/snapshots/test_templates__vm@err_self_extends.txt.snap
---
source: archetect_templating/tests/test_templates.rs
description: "{% extends \"self-extends.txt\" %}"
info: {}
input_file: archetect_templating/tests/inputs/err_self_extends.txt
---
!!!ERROR!!!

Error {
    kind: InvalidOperation,
    detail: "cycle in template inheritance. \"self-extends.txt\" was referenced more than once",
    name: "self-extends.txt",
    line: 1,
}

invalid operation: cycle in template inheritance. "self-extends.txt" was referenced more than once (in self-extends.txt:1)
------------------------------ self-extends.txt -------------------------------
   1 > {% extends "self-extends.txt" %}
     i    ^^^^^^^^^^^^^^^^^^^^^^^^^^ invalid operation
   2 | {% block wat %}{% endblock %}
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
No referenced variables
-------------------------------------------------------------------------------

